Upgrade WDK to 1.6.0-SNAPSHOT and federation-client to 1.0.3